fixed spacing in nav links and social buttons

--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -1,3 +1,7 @@
+.logo {
+  margin-left: 4%;
+}
+
 img {
   width: 5%;
 }
@@ -8,6 +12,7 @@ img {
   a {
     text-decoration: none;
     color: white;
+    padding: 0 10% 0 0;
   }
   a:hover {
       color: gray;
