--- a/src/Title/Title.scss
+++ b/src/Title/Title.scss
@@ -17,6 +17,7 @@
     }
     a {
         text-decoration: none;
+        padding: 0 10% 0 10%;
     }
     a:hover {
         text-decoration: none;
